# deepNeuronalFilter

./: CMakeLists.txt  Doxyfile  README.md  dnf.h  doxy.md  dynamicPlots.cpp  dynamicPlots.h  eeg_filter.cpp  eeg_filter_demo.cpp  parameters.h  run_all_stat.sh  sudoku_stats.sh
DNF/: CMakeLists.txt  Layer.cpp  Layer.h  Net.cpp  Neuron.cpp  Neuron.h  dnf.h
DNF/include/cldl/: Layer.h  Net.h  Neuron.h
DNF/lib/: Layer.cpp  Net.cpp  Neuron.cpp
SubjectData_EyesClosed_Novel/: EyesClosedNovel_Subject1.tsv  EyesClosedNovel_Subject10.tsv  EyesClosedNovel_Subject11.tsv  EyesClosedNovel_Subject12.tsv  EyesClosedNovel_Subject2.tsv  EyesClosedNovel_Subject3.tsv  EyesClosedNovel_Subject4.tsv  EyesClosedNovel_Subject5.tsv  EyesClosedNovel_Subject6.tsv  EyesClosedNovel_Subject7.tsv  EyesClosedNovel_Subject8.tsv  EyesClosedNovel_Subject9.tsv
SubjectData_EyesOpen_Novel/: EyesOpenNovel_Subject1.tsv  EyesOpenNovel_Subject10.tsv  EyesOpenNovel_Subject11.tsv  EyesOpenNovel_Subject12.tsv  EyesOpenNovel_Subject2.tsv  EyesOpenNovel_Subject3.tsv  EyesOpenNovel_Subject4.tsv  EyesOpenNovel_Subject5.tsv  EyesOpenNovel_Subject6.tsv  EyesOpenNovel_Subject7.tsv  EyesOpenNovel_Subject8.tsv  EyesOpenNovel_Subject9.tsv
audio_filter/: CMakeLists.txt  README.md  audio_filter.cpp  dynamicPlots.cpp  dynamicPlots.h  parameters.h
audio_filter/analysis/: explore.py  plot_weights_exp1.plt  snr.py
audio_filter/wavRead/: CMakeLists.txt  demo.cpp  wavread.h
cvui/: CMakeLists.txt  LICENSE  cvui.h
dnf/: Layer.cpp  Net.cpp  Net.h  Neuron.cpp  Neuron.h
docs/: Layer_8h_source.html  Net_8h_source.html  Neuron_8h_source.html  annotated.html  annotated_dup.js  classDNF-members.html  classDNF.html  classDNF.js  classLayer-members.html  classLayer.html  classLayer.js  classNet-members.html  classNet.html  classNet.js  classNeuron-members.html  classNeuron.html  classNeuron.js  classes.html  dir_ad5354abdd765691f2db77226458def0.html  dnf_8h_source.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_func.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/pdf/: annotated.tex  classDNF.tex  classLayer.tex  classNet.tex  classNeuron.tex  index.tex  refman.tex
docs/rtf/: refman.rtf
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js
ecg_filt_demo/: CMakeLists.txt  README.md  ecg_filt_demo.cpp  plot_results.py
ecg_filter/: CMakeLists.txt  README.md  dynamicPlots.cpp  dynamicPlots.h  ecg_filter.cpp  parameters.h
ecg_noise_removal/: CMakeLists.txt  ecg_noise_removal_demo.cpp  parameters.h
eeg_filter/: CMakeLists.txt  README.md  dynamicPlots.cpp  dynamicPlots.h  eeg_filter.cpp  parameters.h  run_jaw.sh  run_jawclench.sh  run_p300.sh  run_read.sh  run_sudoku.sh  runall.sh
eeg_filter/analysis/: README.md  SNRcompareDNFLMS.py  SNRcompareRestWithJawClench.py  explore.py  p300.py  plot_weights_subject10_jawclench.plt  snr.py
eeg_filter/pyAnalysis/: SNRcompareDNFLMS.py  SNRcompareRestWithJawClench.py  SNRcompareRestWithJawClenchReading.py  explore.py  p300.py  plotBoxplots.py  plotComparison.py  snr.py  spectr.py
eeg_sim/: CMakeLists.txt  README.md  dynamicPlots.h  eeg_sim.cpp  parameters.h
eeg_sim/analysis/: README.md  SNRcompareDNFLMS.py  explore.py  p300.py  plot_weights.plt  plot_weights_experiment_0.plt  plot_weights_subject10_jawclench.plt  pure_eeg_signal_ampl_with_cc.py  snr.py
eeg_sim/emg_psd/: README.md  plot_subj10_t_f.py
eeg_sim/noise_psd/: README.md  plot_subj10_t_f.py
eeg_sim/pure_eeg_psd/: ParalysedEEG.py  README.md  paralysed_EEG_PSD_vs_lowpsss.py  plot_paralysed_EEG_PSD.py  plot_paralysed_EEG_PSD_vs_lowpsss.py
ethics/: Consent form REVISED.docx  Information sheet REVISED.docx
pyFiles/: generateFirFilters.py  p300.py  plotRawData.py  plotResults.py  plotWeigthGreyScale.py  plot_spectrum.py  snr.py
results/subject1/: fnn.tsv  grayLayer1_p300_weights.csv  grayLayer2_p300_weights.csv  grayLayer3_p300_weights.csv  grayLayer4_p300_weights.csv  grayLayer5_p300_weights.csv  grayLayer6_p300_weights.csv  grayLayer7_p300_weights.csv  inner.tsv  laplace.tsv  lmsCorrelation.tsv  lmsOutput.tsv  outer.tsv  remover.tsv
results/subject10/: fnn.tsv  grayLayer1_p300_weights.csv  grayLayer2_p300_weights.csv  grayLayer3_p300_weights.csv  grayLayer4_p300_weights.csv  grayLayer5_p300_weights.csv  grayLayer6_p300_weights.csv  grayLayer7_p300_weights.csv  inner.tsv  laplace.tsv  lmsCorrelation.tsv  lmsOutput.tsv  remover.tsv
results/subject11/: fnn.tsv  grayLayer1_p300_weights.csv  grayLayer2_p300_weights.csv  grayLayer3_p300_weights.csv  grayLayer4_p300_weights.csv  grayLayer5_p300_weights.csv  grayLayer6_p300_weights.csv  grayLayer7_p300_weights.csv  inner.tsv  laplace.tsv  lmsCorrelation.tsv  lmsOutput.tsv  remover.tsv
results/subject12/: fnn.tsv  grayLayer1_p300_weights.csv  grayLayer2_p300_weights.csv  grayLayer3_p300_weights.csv  grayLayer4_p300_weights.csv  grayLayer5_p300_weights.csv  grayLayer6_p300_weights.csv  grayLayer7_p300_weights.csv  inner.tsv  laplace.tsv  lmsCorrelation.tsv  lmsOutput.tsv  remover.tsv
results/subject13/: fnn.tsv  grayLayer1_p300_weights.csv  grayLayer2_p300_weights.csv  grayLayer3_p300_weights.csv  grayLayer4_p300_weights.csv  grayLayer5_p300_weights.csv  grayLayer6_p300_weights.csv  grayLayer7_p300_weights.csv  inner.tsv  laplace.tsv  lmsCorrelation.tsv  lmsOutput.tsv  remover.tsv
results/subject14/: fnn.tsv  grayLayer1_p300_weights.csv  grayLayer2_p300_weights.csv  grayLayer3_p300_weights.csv  grayLayer4_p300_weights.csv  grayLayer5_p300_weights.csv  inner.tsv  (+6 more)
ultrasonics/: CMakeLists.txt  dofilter.cpp  dynamicPlots.cpp  fir_filtering.py  mat2txt.cpp  matloader.h  parameters.h  plot_results.py  plotit.py  ultrasound_filter.cpp
(+183 files in other folders)
